# mtbi_meeg

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
python/analysis/: .gitignore  01_read_processed_data.py  02_ROC_AUC.py  02_model_testing.py  02_plot_processed_data.py  03_fit_classifier_and_plot.py  DEPRECATED_PSD_plots.py  DEPRECATED_ROC_AUC.py  PSD_plots.py  ROC_AUC.py  TBIMEG.py  dataframe.csv  freq_waves.py  juho_MEG_scripts.py  logistic_regression.py  loo.py  model_testing.py  plot.py  readdata.py  refactored_cv_and_plotting.cv  refactored_cv_and_plotting.py  refactored_cv_and_plotting_DEPRECATED.py  refactored_cv_and_plotting_grid_search.py  refactored_cv_and_plotting_lightgbm.py  refactored_cv_and_plotting_meg_data.py  runscript.py  statistics.py  subjects_verna.txt  testing_stratifiedgroupkfold.py  triton_runscript.sh
python/processing/: case_check.py  check_system.py  config_common.py  ec_eo_into_two_files.py  fnames.py  plotraw.py  singlesubject_bids.py
src/: README.md  check_system.py  config_common.py  config_eeg.py  pickle_data_handler.py  pyproject_toml.txt
src/analysis/: 01_read_processed_data.py  02_plot_processed_data.py  03_fit_classifier_and_plot.py  03_psd_topoplots.py  04_create_report.py  05_reports_to_pdf.py  combine_html.py  count_code_lines.py  f.txt  hyperparameter.py  model_testing.py  report_test.py  run_files.py  snakefile
src/other_files/: 00_maxfilter.py  (+2 more)
tests/: test_01_read_processed_data.py  test_01_read_processed_data_unittest.py  test_02_plot_processed_data.py
(+38 files in other folders)
